2008-10-01  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/group-2.s: New.
	* binutils-all/strip-4.d: Likewise.
	* binutils-all/strip-5.d: Likewise.

	* binutils-all/objcopy.exp: Test objcopy on group-2.s.  Run
	strip-4 and strip-5.

2008-07-26  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objdump.exp: Run compressed debug test only for ELF.

2008-07-11  Hans-Peter Nilsson  <hp@axis.com>

	* binutils-all/objdump.W: Generalize to adjust for targets with
	non-byte-size instructions.

2008-07-09  Craig Silverstein  <csilvers@google.com>

	* binutils-all/objdump.exp: Add test for objdump -s on a file
	with a compressed debug section.  Add test for objdump -W on a
	file that contains a compressed debug section.
	* binutils-all/readelf.exp: Call readelf_compressed_wa_test.
	(readelf_compressed_wa_test): New function.
	* binutils-all/dw2-compressed.S: New file.
	* binutils-all/objdump.W: New file.
	* binutils-all/objdump.s: New file.
	* binutils-all/readelf.wa: New file.

2008-07-08  Kai Tietz  <kai.tietz@onevision.com>

	* binutils-all/objcopy.exp (copy_setup): Check if host-triplet
	is target-triplet for execution tests.
	(copy_executable): Likewise.
	(strip_executable): Likewise.
	(strip_executable_with_saving_a_symbol): Likewise.

2008-05-29  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* binutils-all/objcopy.exp: Call KEEP_DEBUG_SYMBOLS_AND_TEST_COPY.
	(keep_debug_symbols_and_test_copy): New function.
	(test5, test6): New variables.

2008-03-27  Cary Coutant <ccoutant@google.com>

	* binutils-all/ar.exp: Add thin archive tests.

2008-02-26  Joseph Myers  <joseph@codesourcery.com>

	* config/default.exp (gcc_gas_flag, dlltool_gas_flag): Define to
	empty for testing an installed toolchain.

2008-02-04  Bob Wilson  <bob.wilson@acm.org>
	
	* binutils-all/objdump.exp (cpus_expected): Add xtensa.
	
2007-10-26  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/windres/windres.exp: Don't xfail.

2007-10-16  Nick Clifton  <nickc@redhat.com>
